# -SentinelAPI

./: .env.example  .gitattributes  .gitignore  DASHBOARD_README.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  endpoints.json  pyproject.toml  requirements.txt  run.py  run_dashboard.py  test_run.py  web_dashboard.py
.github/workflows/: ci.yml
app/: main.py
app/core/: alerts.py  config.py  logger.py  models.py  stats.py
app/monitor/: health_checker.py
app/notifier/: base.py  discord.py  email.py  telegram.py
templates/: dashboard.html
tests/: test_health_checker.py  test_models.py  test_notifiers.py
